--- a/src/weather-app.css
+++ b/src/weather-app.css
@@ -98,3 +98,13 @@ input:focus {
   font-size: 26px;
   font-weight: bold;
 }
+
+.author-rights {
+  padding-top: 10px;
+  margin: 0 auto;
+  max-width: 650px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 11px;
+  font-weight: lighter;
+  color: grey;
+}
