--- a/src/weather-app.css
+++ b/src/weather-app.css
@@ -121,7 +121,7 @@ hr {
   padding-right: 0;
 }
 
-.curr-weather .col-2 {
+.curr-weather .col-3 {
   padding: 0;
 }
 
@@ -170,6 +170,31 @@ hr {
 .curr-info .fas {
   width: 18px;
   height: 18px;
+}
+
+.weather-advice-wrapper {
+  margin-top: 15px;
+  padding: 8px;
+  height: 145px;
+  background-color: #9ad3bc;
+  border-radius: 5px;
+  border: 0 solid #9ad3bc;
+}
+
+.weather-advice p {
+  font-family: "Work Sans", sans-serif;
+  font-size: 13px;
+  font-weight: bold;
+  color: white;
+  margin-bottom: 0;
+}
+
+.weather-advice-icon .fas {
+  color: white;
+  font-size: 35px;
+  position: relative;
+  left: 65%;
+  top: 25px;
 }
 
 /* style forecast */
